# browser

./: README.md  dev.bat
src/: CMakeLists.txt  main.cpp
src/Core/: broswer.cpp  broswer.h  web.cpp  web.h
src/Tool/: conf.hpp
